# voxdrop

./: .gitignore  CLAUDE.md  DropVox.spec  LICENSE  PLAN.md  README.md  VoxDrop.spec  pyproject.toml  requirements.txt
assets/: icon.icns
dropvox/: __init__.py  __main__.py  app.py  history.py  notifications.py  transcriber.py
scripts/: build.sh  create-dmg.sh  create_menubar_icon.py  generate-icon.py
share-extension/: INTEGRATION.md  README.md
tests/: __init__.py  test_app.py  test_history.py  test_transcriber.py
voxdrop/: __init__.py  __main__.py  app.py  clipboard.py  history.py  notifications.py  transcriber.py
